# Rayboy

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  TODO.md  build.zig  build.zig.zon  imgui.ini  main.cpp
.cache/clangd/index/: main.c.202515CB640FD0CC.idx  main.c.D510B0AEA01F8D0F.idx  raygui.h.68C0EACB8236F751.idx  z80.c.C09F05B9E189F4BD.idx
.zed/: debug.json  launch.json  tasks.json
.zig-cache/o/758e1a4ac645368764d2e689557e63a0/: raylib_game
docs/html/: all_8hpp.html  all_8hpp_source.html  annotated.html  annotated_dup.js  bus_8cpp.html  bus_8cpp.js  bus_8cpp_source.html  bus_8hpp.html  bus_8hpp.js  bus_8hpp_source.html  cart_8cpp.html  cart_8cpp.js  cart_8cpp_source.html  cart_8hpp.html  cart_8hpp.js  cart_8hpp_source.html  classRayboyUI-members.html  classRayboyUI.html  classRayboyUI.js  classes.html  common_8cpp.html  common_8cpp.js  common_8cpp_source.html  common_8hpp.html  common_8hpp.js  common_8hpp_source.html  cpu_8cpp.html  cpu_8cpp.js  cpu_8cpp_source.html  cpu_8hpp.html  cpu_8hpp.js  cpu_8hpp_source.html  cpu__fetch_8cpp.html  cpu__fetch_8cpp.js  cpu__fetch_8cpp_source.html  cpu__proc_8cpp.html  cpu__proc_8cpp.js  cpu__proc_8cpp_source.html  cpu__regs_8cpp.html  cpu__regs_8cpp.js  (+196 more)
docs/html/search/: all_0.js  (+97 more)
edu_help/: nintedo_logo.py
engineer/: book.toml
src/: helpers.c  main.c  main.cpp  main.zig  mmu.c  z80.c
src/c_code/: main.c
src/include/: all.hpp  bus.h  bus.hpp  cart.hpp  common.h  common.hpp  cpu.hpp  dbg.hpp  dma.hpp  emu.hpp  emu_stats.hpp  gamepad.hpp  instruction.hpp  interupt.hpp  io.hpp  lcd.hpp  ppu.hpp  ppu_pipeline.hpp  ppu_state_machine.hpp  ram.hpp  stack.hpp  timer.hpp  ui.hpp
src/lib/: bus.cpp  cart.c  cart.cpp  common.cpp  cpu.cpp  cpu_fetch.cpp  cpu_proc.cpp  cpu_regs.cpp  dbg.cpp  dma.cpp  emu.c  emu.cpp  gamepad.cpp  instruction.cpp  interupt.cpp  io.cpp  lcd.cpp  ppu.cpp  ppu_pipeline.cpp  ppu_state_machine.cpp  ram.cpp  stack.cpp  timer.c  timer.cpp  ui.cpp
thesis/: book.toml
thesis/book/: 404.html  chapter_1.html  print.html
thesis/latex/: Niskopoziomowa emulacja sprzętowa implementacja architekturę systemową konsoli Game Boy.aux  Niskopoziomowa emulacja sprzętowa implementacja architekturę systemową konsoli Game Boy.bbl  Niskopoziomowa emulacja sprzętowa implementacja architekturę systemową konsoli Game Boy.bcf  Niskopoziomowa emulacja sprzętowa implementacja architekturę systemową konsoli Game Boy.blg  Niskopoziomowa emulacja sprzętowa implementacja architekturę systemową konsoli Game Boy.run.xml  Niskopoziomowa emulacja sprzętowa implementacja architekturę systemową konsoli Game Boy.tex  Niskopoziomowa emulacja sprzętowa implementacja architekturę systemową konsoli Game Boy.toc  Praca Dyplomowa.aux  Praca Dyplomowa.bbl  Praca Dyplomowa.bcf  Praca Dyplomowa.blg  Praca Dyplomowa.fdb_latexmk  Praca Dyplomowa.fls  Praca Dyplomowa.run.xml  Praca Dyplomowa.tex  Praca Dyplomowa.tex.blg  Praca Dyplomowa.toc  bibblo.bib  bibliography.bib  pdfpdf.json
thesis/src/: Bibliografia.md  SUMMARY.md  chapter_1.md  chapter_2.md  chapter_3.md
(+4 files in other folders)
